[gd_scene load_steps=5 format=3 uid="uid://dg7uiy57g1n7k"]

[ext_resource type="Theme" uid="uid://c720yo72r5nrm" path="res://Themes/DefaultTheme.theme" id="1_godhi"]
[ext_resource type="Script" uid="uid://dnddfmwpwon5i" path="res://Scenes/UI Scenes/DockedUI.gd" id="1_wreyr"]
[ext_resource type="FontFile" uid="uid://cho13riygas28" path="res://fonts/SairaCondensed-Regular.ttf" id="2_wreyr"]

[sub_resource type="Theme" id="Theme_q1ram"]
default_font = ExtResource("2_wreyr")
Button/font_sizes/font_size = 48

[node name="DockedUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wreyr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlanetName" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2

[node name="OwnedFaction" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_godhi")

[node name="HasShipyard" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_godhi")

[node name="HasWilderness" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_godhi")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UnDockBTN" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
z_index = 5
layout_mode = 2
theme = SubResource("Theme_q1ram")
text = "UNDOCK"
